tests/parser/parse-declare.2.bad.error
error: Malformed declaration
  --> test:4:0
   |
 4 |  (declare x)
   |  ^^^^^^^^^^^ expected declared type
