tests/parser/parse-declare.2.bad.coalton
;; BAD: Parse Declare
(package test-package)

(declare x)
